--- a/views/banner.jade
+++ b/views/banner.jade
@@ -4,7 +4,7 @@
 .banner
     nav.navbar(role='navigation')
 
-            a.navbar-brand(href='/') Name It
+            a.navbar-brand(href='/') ZAK Here
 
             ul.nav.navbar-nav.navbar-right
                 li.active
